[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Player_name_edit.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Game_Settings.gd" type="Script" id=2]
[ext_resource path="res://ressources/fonts/fonts.theme" type="Theme" id=3]

[node name="Game_Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Start_Game" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -33.0
margin_top = -20.0
theme = ExtResource( 3 )
text = "GO"

[node name="Players" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -81.0
margin_right = 81.0
margin_bottom = 57.0

[node name="RichTextLabel" type="RichTextLabel" parent="Players"]
margin_right = 162.0
margin_bottom = 12.0
theme = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Joueurs[/center]"
text = "Joueurs"
fit_content_height = true
scroll_active = false

[node name="Add_Player" type="Button" parent="Players"]
margin_top = 16.0
margin_right = 162.0
margin_bottom = 33.0
theme = ExtResource( 3 )
text = "+"

[node name="Player_name_edit" parent="Players" instance=ExtResource( 1 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 37.0
margin_right = 162.0
margin_bottom = 57.0

[connection signal="pressed" from="Start_Game" to="." method="_on_Start_Game_pressed"]
[connection signal="pressed" from="Players/Add_Player" to="." method="_on_Add_Player_pressed"]
